# fpspkc24cxx

./: CMakeLists.txt  README.md
include/glad/: glad.c  glad.h
source/: constants.hpp  error_context.hpp  glad.c  main.cpp  types.hpp  variable_bitset.hpp
source/game/: game.hpp
source/game/backend/: binary_reader.hpp  camera.hpp  constants.hpp  error_context.hpp  game_object.hpp  globals.hpp  kb_chunk_archive.hpp  kb_chunk_mesh.hpp  kb_io.hpp  kb_util.hpp  math_util.hpp  variable_bitset.hpp
source/shaders/: basic_frag.glsl  basic_frag.hlsl.hpp  basic_vtx.hlsl.hpp  shader.hpp
